# smart-led

./: .gitmodules  pubspec.yaml
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
client/: README.md
client/android/app/: build.gradle
client/android/app/src/main/kotlin/tech/villapaita/smart_led/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/web/: index.html
client/windows/runner/: Runner.rc  main.cpp
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: CMakeLists.txt  custom_mbedtls_config.h  lwipopts.h  main.c
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
